lib/src/compiler/tests/testdata/errors/10.out
error[E100]: wrong type
 --> line:2:14
  |
2 |   condition: 1 matches /foobar/
  |              ^ expression should be `string`, but is `integer`
  |